--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-xml-parser": "^1.1.6",
+    "xml-js": "^1.6.11"
   },
   "scripts": {
     "start": "react-scripts start",
