--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
+    "react-loading-overlay": "^1.0.1",
     "react-scripts": "3.4.1",
     "react-xml-parser": "^1.1.6",
     "xml-js": "^1.6.11"
